src/tests/ci/assignment_6_advanced_features/valid/13_union_type_alias_basic.c
typedef union Value {
    int i;
    char c;
    float f;
} Value;

int main() {
    Value v;
    v.i = 9;
    return v.i;
}