src/tests/ci/assignment_6_advanced_features/invalid_semantic/12_union_arrow_on_non_pointer.c
union Value {
    int i;
    char c;
};

int main() {
    union Value v;

    v->i = 5;

    return 0;
}